[gd_scene load_steps=3 format=3 uid="uid://c7il61voitkdo"]

[ext_resource type="Script" path="res://Scripts/Title.gd" id="1_ev2yb"]
[ext_resource type="PackedScene" uid="uid://cgfnwtxbl14yp" path="res://Level.tscn" id="2_wvwg3"]

[node name="Title" type="Node2D"]
script = ExtResource("1_ev2yb")
next_scene = ExtResource("2_wvwg3")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Title" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Title"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spacer" type="Control" parent="UI/Title/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="Title" type="Label" parent="UI/Title/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Bullet Journal"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Title/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.42

[node name="StartButton" type="Button" parent="UI/Title/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Start"

[node name="CreditsButton" type="Button" parent="UI/Title/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Credits"

[node name="Spacer2" type="Control" parent="UI/Title/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="Credits" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 41.0
offset_top = 41.0
offset_right = -41.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UI/Credits"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Credits/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/Credits/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 4.0
text = "The credits go here but they don't exist yet so..."
horizontal_alignment = 1
autowrap_mode = 3

[node name="CloseCreditsButton" type="Button" parent="UI/Credits/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Close"

[connection signal="pressed" from="UI/Title/VBoxContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="UI/Title/VBoxContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="UI/Credits/Panel/VBoxContainer/CloseCreditsButton" to="." method="_on_close_credits_pressed"]
